Sutter Health/src/objects/SH_History__c.object
<CustomObject>
    <fields>
        <fullName>SH_Article_Id__c</fullName>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SH_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sh_View_Date__c</fullName>
        <label>View Date</label>
        <type>Date</type>
    </fields>
    <label>History</label>
    <nameField>
        <displayFormat>H - {00000}</displayFormat>
        <label>History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>